--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NETWORK=testnet
-PRIVATE_KEY=
+PRIVATE_KEY=APrivateKey1zkpELvggaejqHqcgYFC9RwouFXeeUGcuNdUWaP3TnpVMxty
 ENDPOINT=https://api.explorer.provable.com/v1
